platform/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
spec:
  selector:
    app: authelia
  ports:
    - name: http
      port: 80
      targetPort: http
